// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Document Component should render AMP version correctly 1`] = `
.emotion-0 {
  min-height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #FDFDFD;
}

<html
  data-reactroot=""
  lang="test"
>
  <head>
    <meta
      content="width=device-width, initial-scale=1, minimum-scale=1"
      data-react-helmet="true"
      name="viewport"
    />
    <link
      href="/favicon.ico"
      rel="shortcut icon"
      type="image/x-icon"
    />
    <link
      crossorigin="anonymous"
      href="http://example.com"
      rel="preconnect"
    />
    <link
      href="http://example.com"
      rel="dns-prefetch"
    />
    <title
      data-react-helmet="true"
    >
      Test title
    </title>
    <style
      amp-custom=""
      data-emotion-css="7prgni-StyledLink"
    >
      .css-7prgni-StyledLink{display:inline-block;}
    </style>
    <link
      data-react-helmet="true"
      href="https://www.bbc.com/news/articles/c6v11qzyv8po"
      rel="canonical"
    />
    <style
      amp-boilerplate=""
    >
      body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}
    </style>
    <noscript>
      <style
        amp-boilerplate=""
      >
        body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}
      </style>
    </noscript>
    <script
      async=""
      src="https://cdn.ampproject.org/v0.js"
    />
    <script
      async=""
      custom-element="amp-geo"
      src="https://cdn.ampproject.org/v0/amp-geo-0.1.js"
    />
    <script
      async=""
      custom-element="amp-consent"
      src="https://cdn.ampproject.org/v0/amp-consent-0.1.js"
    />
    <script
      async=""
      custom-element="amp-analytics"
      src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"
    />
  </head>
  <body
    class="amp-geo-pending"
  >
    <div
      class="emotion-0 emotion-1"
      id="root"
    >
      <h1
        data-reactroot=""
      >
        App!
      </h1>
    </div>
  </body>
</html>
`;

exports[`Document Component should render correctly 1`] = `
.emotion-0 {
  min-height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #FDFDFD;
}

<html
  class="no-js"
  data-reactroot=""
  lang="test"
>
  <head>
    <meta
      content="width=device-width, initial-scale=1, minimum-scale=1"
      data-react-helmet="true"
      name="viewport"
    />
    <link
      href="/favicon.ico"
      rel="shortcut icon"
      type="image/x-icon"
    />
    <link
      crossorigin="anonymous"
      href="http://example.com"
      rel="preconnect"
    />
    <link
      href="http://example.com"
      rel="dns-prefetch"
    />
    <title
      data-react-helmet="true"
    >
      Test title
    </title>
    <style
      data-emotion-css="7prgni-StyledLink"
    >
      .css-7prgni-StyledLink{display:inline-block;}
    </style>
    <link
      data-react-helmet="true"
      href="https://www.bbc.com/news/articles/c6v11qzyv8po"
      rel="canonical"
    />
  </head>
  <body>
    <div
      class="emotion-0 emotion-1"
      id="root"
    >
      <h1
        data-reactroot=""
      >
        App!
      </h1>
    </div>
    <script>
      window.SIMORGH_DATA={"test":"data"}
    </script>
    <div>
      <!--[if !IE]&gt;&lt;!-->
    </div>
    <script
      src="main.js"
    />
    <script
      src="vendor.js"
    />
    <script
      src="igbo.js"
    />
    <div>
      <!--&lt;![endif]-->
    </div>
    <script
      type="text/javascript"
    >
      document.documentElement.classList.remove("no-js");
    </script>
  </body>
</html>
`;
